# cst2-project

./: .gitignore  bib.bib  default.nix  latexmkrc  phase1.txt  progress-report.tex  propbody.tex  proposal.tex
haskell/: GenGraphs.hs  Main.hs  Mohri.hs  MohriPriority.hs  Types.hs  default.nix  exe.prof  haskell.cabal  profile.sh  stack.yaml  summarise.sh  test-data.txt
haskell/app/: Main.hs
haskell/data/: test-B-100-128.txt  test-B-100-16.txt  test-B-100-2.txt  test-B-100-256.txt  test-B-100-32.txt  test-B-100-4.txt  test-B-100-64.txt  test-B-100-8.txt  test-B-150-128.txt  test-B-150-16.txt  test-B-150-2.txt  test-B-150-256.txt  test-B-150-32.txt  test-B-150-4.txt  test-B-150-64.txt  test-B-150-8.txt  test-B-200-128.txt  test-B-200-16.txt  test-B-200-2.txt  test-B-200-256.txt  test-B-200-32.txt  test-B-200-4.txt  test-B-200-64.txt  test-B-200-8.txt  test-B-250-128.txt  test-B-250-16.txt  test-B-250-2.txt  test-B-250-256.txt  test-B-250-32.txt  test-B-250-4.txt  test-B-250-64.txt  test-B-250-8.txt  test-B-300-128.txt  test-B-300-16.txt  test-B-300-2.txt  test-B-300-256.txt  test-B-300-32.txt  test-B-300-4.txt  test-B-300-64.txt  test-B-300-8.txt  (+110 more)
haskell/data-backup/: test-B-100-1024.txt  test-B-100-512.txt  test-B-200-1024.txt  test-B-200-512.txt  test-B-300-1024.txt  test-B-300-512.txt  test-C-100-1024.txt  test-C-100-512.txt  test-C-200-1024.txt  test-C-200-512.txt  test-C-300-1024.txt  test-C-300-512.txt  test-U-100-32.txt  test-U-200-128.txt  test-U-300-512.txt
haskell/process-prof/: Main.hs
haskell/results/: test-B-100-128.txt  test-B-100-16.txt  test-B-100-2.txt  test-B-100-256.txt  test-B-100-32.txt  test-B-100-4.txt  test-B-100-64.txt  test-B-100-8.txt  test-B-150-128.txt  test-B-150-16.txt  test-B-150-2.txt  test-B-150-256.txt  test-B-150-32.txt  test-B-150-4.txt  test-B-150-64.txt  test-B-150-8.txt  test-B-200-128.txt  test-B-200-16.txt  test-B-200-2.txt  test-B-200-256.txt  test-B-200-32.txt  test-B-200-4.txt  (+114 more)
(+434 files in other folders)
